Apply suggestions from code review
More idiomatic usage of Java stream API.

Co-authored-by: Sebastian Stenzel <overheadhunter@users.noreply.github.com>